# ayatana-indicator-application

./: .build.yml  .bzrignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  Makefile.am  Makefile.am.coverage  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  configure  configure.ac
data/: CMakeLists.txt  Makefile.am  Makefile.in  ayatana-indicator-application.conf.in  ayatana-indicator-application.desktop.in  ayatana-indicator-application.service.in  indicator-application.conf.in  indicator-application.desktop.in  indicator-application.service.in  ordering-override.keyfile
data/upstart/: Makefile.am  ayatana-indicator-application.desktop.in  indicator-application.desktop.in
debian/: ayatana-indicator-application.links  changelog  control  copyright  rules  watch
debian/patches/: fix-null-string-to-variant-crash.patch  lp_743564.patch  series
m4/: gcov.m4
src/: CMakeLists.txt  Makefile.am  Makefile.in  app-indicator-enum-types.c  application-service-appstore.c  application-service-appstore.h  application-service-marshal.c  application-service-watcher.c  application-service.c  application-service.xml  ayatana-appindicator3-0.1.pc.in  ayatana-application-service-marshal.list  ayatana-application-service.xml  dbus-shared.h  gen-application-service.xml.c  gen-notification-approver.xml.c  generate-id.h  indicator-application.c  notification-approver.xml
tests/: Makefile.am  Makefile.in  test-approver.c
